--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,7 @@ body {
   max-width: 640px;
   margin: 0 auto;
   padding: 0.5rem;
-  background:silver;
+  background:url:("https://s1.1zoom.me/big3/471/Painting_Art_Back_view_Photographer_575380_3840x2400.jpg");
 }
 
 header {
